Bug #158424 fix: Frontend>> Drop-down text should wrapped properly under the dropdown menu of 'Select UCM Type'

--- a/src/components/com_tjucm/media/css/tjucm.css
+++ b/src/components/com_tjucm/media/css/tjucm.css
@@ -18,3 +18,7 @@ width:200px !important;
     width: 100px !important;
     height: auto;
 }
+
+#copyModal .chzn-container{
+	min-width: 150px;
+}
